--- a/Client/UI/src/pages/CartPage/CartPage.scss
+++ b/Client/UI/src/pages/CartPage/CartPage.scss
@@ -87,10 +87,11 @@
       display: flex;
       flex-direction: column;
       min-height: 420px;
+      padding: 16px;
 
-      > & {
-        padding: 16px;
-      }
+      // > & {
+      //   padding: 16px;
+      // }
       &-title {
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
         padding-bottom: 12px;
